@@ -178,6 +178,7 @@ Codec * find_codec(const std::string & name);
 #define _BZ2_VERSION        "1.0.6"
 #define _CITYHASH_VERSION   "1.1.0"
 #define _CRAPWOW_VERSION    "2012-06-07"
+#define _CRUSH_VERSION      "0.0.1"
 #define _CRYPTOPP_VERSION   "5.6.1"
 #define _DOBOZ_VERSION      "2011-03-19"
 #define _ECRYPT_VERSION     "2012-06-10"
