@@ -1,5 +1,6 @@
 0.15
 [+] added memcpy, memmove codecs
+[+] added crush
 [+] added zling
 [~] updated lz4 to r114
 [~] updated LZJB to the latest FreeBSD version
